@@ -30,6 +30,7 @@ Unreleased Version 2.3.0-pre
  * Feature: Don't ask for login method, username and password again when reconnecting. Thanks Meru for reporting.
  * Feature: Don't show chat until connecting to a session and remember the size of it even when it was hidden.
  * Feature: Send button in chat, for virtual keyboards where hitting return is inconvenient.
+ * Feature: Make drawpile-timelapse command-line tool fill the background with the canvas background color instead of black.
 
 2025-08-14 Version 2.3.0-beta.3
  * Fix: Allow putting labels on a blank brush thumbnail. Thanks hipofiz for reporting.
